--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@astrojs/rss": "^2.1.0",
 		"@astrojs/sitemap": "^1.0.1",
 		"@astrojs/vercel": "^3.1.1",
-		"astro": "^2.0.10"
+		"astro": "^2.0.10",
+		"gsap": "^3.11.4"
 	}
 }
