--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "strictNullChecks": true,
     "baseUrl": ".",
     "paths": {
+      "@components/*": ["src/components/*"],
       "@utils/*": ["src/utils/*"]
     }
   }
