--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
 		"@astrojs/mdx": "^0.16.0",
 		"@astrojs/rss": "^2.1.0",
 		"@astrojs/sitemap": "^1.0.1",
+		"@astrojs/tailwind": "^3.0.1",
 		"@astrojs/vercel": "^3.1.1",
-		"astro": "^2.0.10",
-		"gsap": "^3.11.4"
+		"astro": "^2.0.4",
+		"gsap": "^3.11.4",
+		"tailwindcss": "^3.0.24"
 	}
 }
